# pulse-rs

./: Cargo.toml
pulser/: Cargo.toml
pulser-cli/: Cargo.toml
pulser-cli/src/: cli.rs  main.rs  subscribe.rs
pulser/src/: ignore.rs  lib.rs  sender.rs  simple.rs
pulser/src/pulseaudio/: connect.rs  mainloop.rs  mod.rs  util.rs
pulser/src/pulseaudio/api/: command.rs  mod.rs  structs.rs  volume.rs
src/: main.rs
src/pulseaudio/: api.rs  connect.rs  mod.rs  util.rs
src/pulseaudio/api/: command.rs  mod.rs  volume.rs
