[package]
name = "pulser-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
mio = "0.8.6"
mio-misc = "2.0.0"
pulser = { path = "../pulser" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
signal-hook = "0.3.15"
signal-hook-mio = { version = "0.2.3", features = ["mio-0_8", "support-v0_8"] }
